[project]
name = "ROS Verification"
version = "0.0.8"
description = "Verification of ROS Code"
authors = [
    "Alcides Fonseca <me@alcidesfonseca.com>"
]
license = "MIT"
readme = "README.md"
python = "^3.9"
homepage = "https://github.com/alcides/GeneticEngine/"
repository = "https://github.com/alcides/GeneticEngine/"
documentation = "https://github.com/alcides/GeneticEngine/"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 43.0.0',
]